alignment issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,6 @@ body {
 }
 
 .post-main-container {
-  width: 80%;
   margin: 1rem auto;
 }
 .dlt-btn {
